# mcserverstatus

./: Cargo.toml  README.md
src/: main.rs
