[package]
name = "mcserverstatus"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/coolreader18/mcserverstatus"
authors = ["Noa <coolreader18@gmail.com>"]
description = "Check who's online before you open up your minecraft client."
edition = "2021"

[dependencies]
anyhow = "1.0.57"
async-minecraft-ping = "0.8.0"
clap = { version = "3.1.18", features = ["derive"] }
console = { version = "0.15.0", default-features = false }
dialoguer = { version = "0.10.1", default-features = false }
dirs-next = "2.0.0"
hematite-nbt = "0.5.2"
indicatif = "0.16.2"
itertools = "0.10.3"
serde = { version = "1.0.137", features = ["derive"] }
textwrap = { version = "0.15.0", default-features = false }
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros", "signal"] }
